# Same-Blue

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  go.mod
cmd/same-blue/: main.go
internal/probe/: probe.go  probe_test.go
internal/runner/: runner.go  runner_test.go
src/: core_math.cpp  main.cpp
src/encode/: pipeline.cpp  pipeline.h
src/hdr/: avformat_raii.h  color_spaces.h  hdr_probe.cpp  hdr_probe.h
src/process/: color_convert.h
src/tests/: color_convert_test.cpp
